starting to incorporate spread into the pyramid_orders

--- a/double3_sma_nb.ipynb
+++ b/double3_sma_nb.ipynb
@@ -4196,6 +4196,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create 2 new columns for spread exits for nova and msolutions\n",
+    "profit_df['nova_spread_exit_price'] = np.where((profit_df['direction'].str.strip() == 'buy'), profit_df['exit_price'] + spread.loc['Close Spread Buy', 'Nova'],\n",
+    "                                            np.where((profit_df['direction'].str.strip() == 'sell'), profit_df['exit_price'] + spread.loc['Close Spread Sell', 'Nova'], np.nan))\n",
+    "profit_df['msolutions_spread_exit_price'] = np.where((profit_df['direction'].str.strip() == 'buy'), profit_df['exit_price'] + spread.loc['Close Spread Buy', 'MSolutions'],\n",
+    "                                                np.where((profit_df['direction'].str.strip() == 'sell'), profit_df['exit_price'] + spread.loc['Close Spread Sell', 'MSolutions'], np.nan))\n",
+    "# create 2 new columns for spread entries for nova and msolutions\n",
+    "profit_df['nova_spread_entry_price'] = np.where((profit_df['direction'].str.strip() == 'buy'), profit_df['entry_price'] + spread.loc['Spread Buy', 'Nova'],\n",
+    "                                            np.where((profit_df['direction'].str.strip() == 'sell'), profit_df['entry_price'] + spread.loc['Spread Sell', 'Nova'], np.nan))\n",
+    "profit_df['msolutions_spread_entry_price'] = np.where((profit_df['direction'].str.strip() == 'buy'), profit_df['entry_price'] + spread.loc['Spread Buy', 'MSolutions'],\n",
+    "                                                np.where((profit_df['direction'].str.strip() == 'sell'), profit_df['entry_price'] + spread.loc['Spread Sell', 'MSolutions'], np.nan))\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9015,6 +9033,7 @@
     "renko_full_data_pyramid = renko_full_data.loc[renko_full_data['cum_position_count'].isin(pyramid_position_possible_list)]\n",
     "# for each position in renko_full_data_pyramid, create a new column that is entry_price which will be the 'close' price of the first row\n",
     "renko_full_data_pyramid.loc[:, 'entry_price'] = renko_full_data_pyramid.groupby('cum_position_count')['close'].transform('first')\n",
+    "\n",
     "# for each position in renko_full_data_pyramid, create a new column that is pyramid_position that will be 1 if the 'close' is >= entry_price + (brick_size*sma_length) when the sma_signal is buy \n",
     "# and <= entry_price - (brick_size*sma_length) when the sma_signal is sell\n",
     "renko_full_data_pyramid.loc[:, 'pyramid_entry_prices'] = np.where((renko_full_data_pyramid['sma_signal'] == 'buy') & #(renko_full_data_pyramid['brick_color'] == 'green') & \n",
