--- a/double3_sma_nb.ipynb
+++ b/double3_sma_nb.ipynb
@@ -9033,6 +9033,11 @@
     "renko_full_data_pyramid = renko_full_data.loc[renko_full_data['cum_position_count'].isin(pyramid_position_possible_list)]\n",
     "# for each position in renko_full_data_pyramid, create a new column that is entry_price which will be the 'close' price of the first row\n",
     "renko_full_data_pyramid.loc[:, 'entry_price'] = renko_full_data_pyramid.groupby('cum_position_count')['close'].transform('first')\n",
+    "# create 2 new columns for spread entries for nova and msolutions\n",
+    "renko_full_data_pyramid['nova_spread_entry_price'] = np.where((renko_full_data_pyramid['sma_signal'].str.strip() == 'buy'), renko_full_data_pyramid['entry_price'] + spread.loc['Spread Buy', 'Nova'],\n",
+    "                                            np.where((renko_full_data_pyramid['sma_signal'].str.strip() == 'sell'), renko_full_data_pyramid['entry_price'] + spread.loc['Spread Sell', 'Nova'], np.nan))\n",
+    "renko_full_data_pyramid['msolutions_spread_entry_price'] = np.where((renko_full_data_pyramid['sma_signal'].str.strip() == 'buy'), renko_full_data_pyramid['entry_price'] + spread.loc['Spread Buy', 'MSolutions'],\n",
+    "                                                np.where((renko_full_data_pyramid['sma_signal'].str.strip() == 'sell'), renko_full_data_pyramid['entry_price'] + spread.loc['Spread Sell', 'MSolutions'], np.nan))\n",
     "\n",
     "# for each position in renko_full_data_pyramid, create a new column that is pyramid_position that will be 1 if the 'close' is >= entry_price + (brick_size*sma_length) when the sma_signal is buy \n",
     "# and <= entry_price - (brick_size*sma_length) when the sma_signal is sell\n",
