minor updates for spread

--- a/double3_sma_nb.ipynb
+++ b/double3_sma_nb.ipynb
@@ -9034,18 +9034,40 @@
     "# for each position in renko_full_data_pyramid, create a new column that is entry_price which will be the 'close' price of the first row\n",
     "renko_full_data_pyramid.loc[:, 'entry_price'] = renko_full_data_pyramid.groupby('cum_position_count')['close'].transform('first')\n",
     "# create 2 new columns for spread entries for nova and msolutions\n",
-    "renko_full_data_pyramid['nova_spread_entry_price'] = np.where((renko_full_data_pyramid['sma_signal'].str.strip() == 'buy'), renko_full_data_pyramid['entry_price'] + spread.loc['Spread Buy', 'Nova'],\n",
-    "                                            np.where((renko_full_data_pyramid['sma_signal'].str.strip() == 'sell'), renko_full_data_pyramid['entry_price'] + spread.loc['Spread Sell', 'Nova'], np.nan))\n",
-    "renko_full_data_pyramid['msolutions_spread_entry_price'] = np.where((renko_full_data_pyramid['sma_signal'].str.strip() == 'buy'), renko_full_data_pyramid['entry_price'] + spread.loc['Spread Buy', 'MSolutions'],\n",
-    "                                                np.where((renko_full_data_pyramid['sma_signal'].str.strip() == 'sell'), renko_full_data_pyramid['entry_price'] + spread.loc['Spread Sell', 'MSolutions'], np.nan))\n",
+    "renko_full_data_pyramid['nova_spread_entry_price'] = np.where((renko_full_data_pyramid['sma_signal'].str.strip() == 'buy'), \n",
+    "                                                              renko_full_data_pyramid['entry_price'] + spread.loc['Spread Buy', 'Nova'],\n",
+    "                                            np.where((renko_full_data_pyramid['sma_signal'].str.strip() == 'sell'), \n",
+    "                                                     renko_full_data_pyramid['entry_price'] + spread.loc['Spread Sell', 'Nova'], np.nan))\n",
+    "\n",
+    "renko_full_data_pyramid['msolutions_spread_entry_price'] = np.where((renko_full_data_pyramid['sma_signal'].str.strip() == 'buy'), \n",
+    "                                                                    renko_full_data_pyramid['entry_price'] + spread.loc['Spread Buy', 'MSolutions'],\n",
+    "                                                np.where((renko_full_data_pyramid['sma_signal'].str.strip() == 'sell'), \n",
+    "                                                         renko_full_data_pyramid['entry_price'] + spread.loc['Spread Sell', 'MSolutions'], np.nan))\n",
     "\n",
     "# for each position in renko_full_data_pyramid, create a new column that is pyramid_position that will be 1 if the 'close' is >= entry_price + (brick_size*sma_length) when the sma_signal is buy \n",
     "# and <= entry_price - (brick_size*sma_length) when the sma_signal is sell\n",
-    "renko_full_data_pyramid.loc[:, 'pyramid_entry_prices'] = np.where((renko_full_data_pyramid['sma_signal'] == 'buy') & #(renko_full_data_pyramid['brick_color'] == 'green') & \n",
-    "                                                       (renko_full_data_pyramid['close'] > renko_full_data_pyramid['entry_price'] + (brick_size*sma_length)), renko_full_data_pyramid['close'],\n",
+    "renko_full_data_pyramid.loc[:, 'nova_pyramid_entry_prices'] = np.where((renko_full_data_pyramid['sma_signal'] == 'buy') & #(renko_full_data_pyramid['brick_color'] == 'green') & \n",
+    "                                                       (renko_full_data_pyramid['close'] > (renko_full_data_pyramid['entry_price'] + (brick_size*sma_length))), \n",
+    "                                                       renko_full_data_pyramid['close'] + spread.loc['Spread Buy', 'Nova'],\n",
     "                                                np.where((renko_full_data_pyramid['sma_signal'] == 'sell') & #(renko_full_data_pyramid['brick_color'] == 'red') & \n",
-    "                                                         (renko_full_data_pyramid['close'] < renko_full_data_pyramid['entry_price'] - (brick_size*sma_length)), renko_full_data_pyramid['close'], \n",
+    "                                                         (renko_full_data_pyramid['close'] < (renko_full_data_pyramid['entry_price'] - (brick_size*sma_length))), \n",
+    "                                                         renko_full_data_pyramid['close'] + spread.loc['Spread Sell', 'Nova'], \n",
     "                                                         0))\n",
+    "renko_full_data_pyramid.loc[:, 'msolutions_pyramid_entry_prices'] = np.where((renko_full_data_pyramid['sma_signal'] == 'buy') & #(renko_full_data_pyramid['brick_color'] == 'green') & \n",
+    "                                                       (renko_full_data_pyramid['close'] > (renko_full_data_pyramid['entry_price'] + (brick_size*sma_length))), \n",
+    "                                                       renko_full_data_pyramid['close'] + spread.loc['Spread Buy', 'MSolutions'],\n",
+    "                                                np.where((renko_full_data_pyramid['sma_signal'] == 'sell') & #(renko_full_data_pyramid['brick_color'] == 'red') & \n",
+    "                                                         (renko_full_data_pyramid['close'] < (renko_full_data_pyramid['entry_price'] - (brick_size*sma_length))), \n",
+    "                                                         renko_full_data_pyramid['close'] + spread.loc['Spread Sell', 'MSolutions'], \n",
+    "                                                         0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "renko_full_data_pyramid_grouped = renko_full_data_pyramid.groupby('cum_position_count')['pyramid_entry_prices'].apply(lambda x: list(x))\n",
     "# merge renko_full_data_pyramid_grouped with profit_df\n",
     "if 'pyramid_entry_prices' in profit_df.columns:\n",
@@ -9054,7 +9076,7 @@
     "profit_df = pd.merge(profit_df, renko_full_data_pyramid_grouped, how='left', left_index=True, right_index=True)\n",
     "# remove any value from each list in pyramid_entry_prices if it is == 0 and only apply it to those values that are not nan\n",
     "profit_df.loc[:, 'pyramid_entry_prices'] = profit_df.loc[:, 'pyramid_entry_prices'].apply(lambda x: [i for i in x if i != 0] if x is not np.nan else x)\n",
-    "profit_df\n"
+    "profit_df"
    ]
   },
   {
