fixed the dst error and joined all the event data to the dataframe

--- a/editing_calendar_statement.ipynb
+++ b/editing_calendar_statement.ipynb
@@ -298,6 +298,8 @@
    "source": [
     "# convert the date to datetime from format \"YYYY, February 01, 00:00\"\n",
     "df['Date'] = pd.to_datetime(df['Date'], format='%Y, %B %d, %H:%M')\n",
+    "# add 7 hrs to the date\n",
+    "df['Date'] = df['Date'] + pd.Timedelta(hours=7)\n",
     "# convert Date into a string with the format: YYYY.MM.DD HH:MI:SS\n",
     "df['Date'] = df['Date'].dt.strftime('%Y.%m.%d %H:%M:%S')\n",
     "df"
