added 2 columns for news to profit_df

--- a/double3_sma_nb.ipynb
+++ b/double3_sma_nb.ipynb
@@ -2032,6 +2032,10 @@
     "profit_df['brick_color'] = renko_full_data.groupby('cum_position_count')['brick_color'].first()\n",
     "# profit_df['direction'] = profit_df['direction'].str.split('+').str[1]\n",
     "\n",
+    "# bring in the news_event_5 column from renko_full_data\n",
+    "profit_df['news_event_5_total_bars'] = renko_full_data.groupby('cum_position_count')['news_event_5'].sum()\n",
+    "profit_df['news_event_5_entry'] = renko_full_data.groupby('cum_position_count')['news_event_5'].first()\n",
+    "\n",
     "# what if I didn't take the first TP?\n",
     "profit_df['Nova_profit_initial'] = np.where((profit_df['direction'].str.strip() == 'buy'),\n",
     "                                            ((profit_df['exit_price'] + spread.loc['Close Spread Buy', 'Nova']) - (profit_df['entry_price'] + spread.loc['Spread Buy', 'Nova']))\n",
