added next item to do in the next cell

--- a/double3_sma_nb.ipynb
+++ b/double3_sma_nb.ipynb
@@ -4740,6 +4740,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find out where the length of the lists in nova_profit_pyramid_buy or _sell is 0 and make them NaN\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
    "outputs": [],
