--- a/double3_sma_nb.ipynb
+++ b/double3_sma_nb.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        "pandas.core.indexes.datetimes.DatetimeIndex"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
        "[6640 rows x 12 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1101,7 @@
        "[6640 rows x 17 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1353,7 @@
        "[3199 rows x 6 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1368,14 +1368,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No new events to add\n"
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "Error: 2024_3_31 not found in files\n",
+      "New events added for 2024_3_31\n"
      ]
     }
    ],
@@ -1410,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1422,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1914,7 +2031,7 @@
        "[6640 rows x 24 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1932,7 +2049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2151,7 +2268,7 @@
        "[612 rows x 7 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2165,7 +2282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2182,11 +2299,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "renko_full_data.columns = renko_full_data.columns.str.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "open                                0\n",
+       "high                                0\n",
+       "low                                 0\n",
+       "close                               0\n",
+       "volume                              0\n",
+       "ohlc4                               0\n",
+       "sma                                 3\n",
+       "smoothing_sma                       6\n",
+       "sma_diff                            6\n",
+       "sma_sign                            6\n",
+       "sma_crossover                       0\n",
+       "sma_signal                         14\n",
+       "brick_color                         0\n",
+       "day_of_week                         0\n",
+       "day_of_week_transition              0\n",
+       "take_profit                      5693\n",
+       "stop_loss                          14\n",
+       "datetime_5                          0\n",
+       "datetime_neg_5                      0\n",
+       "news_event_5                        0\n",
+       "secs_until_next_news_event          0\n",
+       "position_count                      0\n",
+       "nova_cum_position_count           520\n",
+       "msolutions_cum_position_count    1108\n",
+       "stop_loss_hit                       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find the counts of null values in every column of renko_full_data\n",
+    "renko_full_data.isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6640"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(renko_full_data.open)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = ['open', 'high', 'low', 'close', 'sma', 'smoothing_sma',\n",
+    "'sma_diff', 'sma_sign', 'sma_crossover', \n",
+    "'bollinger_width', 'awesome_oscillator', 'day_of_week_transition',\n",
+    "'news_event_5', 'secs_until_next_news_event']\n",
+    "# drop rows with null values in features\n",
+    "renko_full_data = renko_full_data.dropna(subset=features)\n"
    ]
   },
   {
