commented out the save to the gym_trading data folder

--- a/double3_sma_nb.ipynb
+++ b/double3_sma_nb.ipynb
@@ -292,7 +292,7 @@
     "    # save renko to csv\n",
     "    # renko_full_data.to_csv(f'./brick_size_variations/renko_full_data_{brick_size_str}.csv')\n",
     "    renko_full_data.to_csv(f'renko_full_data_{brick_size_str}.csv')\n",
-    "    renko_full_data.to_csv(f'C:/Users/WilliamFetzner/Documents/Trading/gym-anytrading/gym_anytrading/datasets/data/renko_full_data_{brick_size_str}.csv')"
+    "    # renko_full_data.to_csv(f'C:/Users/WilliamFetzner/Documents/Trading/gym-anytrading/gym_anytrading/datasets/data/renko_full_data_{brick_size_str}.csv')"
    ]
   },
   {
