made it so that the not found for the file doesn't continually repeat

--- a/double3_sma_nb.ipynb
+++ b/double3_sma_nb.ipynb
@@ -1516,7 +1516,7 @@
     "            # save the calendar_df_full to a csv\n",
     "            # calendar_df_full.to_csv('calendar_df_full.csv', index=False)\n",
     "            break\n",
-    "        else:\n",
+    "        elif file == files[-1]:\n",
     "            # error message - the latest calendar file was not found\n",
     "            print(f\"Error: {sunday_str} not found in files\")\n",
     "else:\n",
