--- a/editing_calendar_statement.ipynb
+++ b/editing_calendar_statement.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,25 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\WilliamFetzner\\AppData\\Local\\Temp\\ipykernel_28416\\176450061.py:12: DeprecationWarning: cafile, capath and cadefault are deprecated, use a custom context instead.\n",
-      "  response = urlopen(url, cafile=certifi.where())\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "317\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# API_KEY = 'EPYIahBQ85aez1GlOfa3KGabAT4DEnnj'\n",
     "# #!/usr/bin/env python\n",
@@ -54,17 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Low', 'Medium', 'High'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# impact_types = []\n",
     "# for event in jason_parsed_data:\n",
@@ -74,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,16 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_2024_4_14.csv'"
+       "'C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_2024_4_21.csv'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -169,99 +145,211 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2024.04.15 15:30:00</td>\n",
-       "      <td>(United States) Retail Sales YoY</td>\n",
+       "      <td>2024.04.23 10:15:00</td>\n",
+       "      <td>(France) HCOB Manufacturing PMI</td>\n",
        "      <td>High</td>\n",
-       "      <td>USD</td>\n",
+       "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2024.04.15 15:30:00</td>\n",
-       "      <td>(United States) Retail Sales Ex Gas/Autos MoM</td>\n",
+       "      <td>2024.04.23 10:15:00</td>\n",
+       "      <td>(France) HCOB Services PMI</td>\n",
        "      <td>High</td>\n",
-       "      <td>USD</td>\n",
+       "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2024.04.15 15:30:00</td>\n",
-       "      <td>(United States) Retail Sales MoM</td>\n",
+       "      <td>2024.04.23 10:30:00</td>\n",
+       "      <td>(Germany) HCOB Services PMI</td>\n",
        "      <td>High</td>\n",
-       "      <td>USD</td>\n",
+       "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2024.04.15 15:30:00</td>\n",
-       "      <td>(United States) NY Empire State Manufacturing ...</td>\n",
+       "      <td>2024.04.23 10:30:00</td>\n",
+       "      <td>(Germany) HCOB Manufacturing PMI</td>\n",
        "      <td>High</td>\n",
-       "      <td>USD</td>\n",
+       "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2024.04.15 15:30:00</td>\n",
-       "      <td>(United States) Retail Sales Ex Autos MoM</td>\n",
+       "      <td>2024.04.23 11:00:00</td>\n",
+       "      <td>(Euro Area) HCOB Manufacturing PMI</td>\n",
        "      <td>High</td>\n",
-       "      <td>USD</td>\n",
+       "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2024.04.16 12:00:00</td>\n",
-       "      <td>(Germany) ZEW Economic Sentiment Index</td>\n",
+       "      <td>2024.04.23 11:00:00</td>\n",
+       "      <td>(Euro Area) HCOB Services PMI</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>2024.04.16 15:30:00</td>\n",
-       "      <td>(United States) Building Permits</td>\n",
+       "      <td>2024.04.23 16:45:00</td>\n",
+       "      <td>(United States) S&amp;P Global Manufacturing PMI</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>2024.04.17 12:00:00</td>\n",
-       "      <td>(Euro Area) CPI</td>\n",
+       "      <td>2024.04.23 16:45:00</td>\n",
+       "      <td>(United States) S&amp;P Global Services PMI</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>2024.04.18 10:15:00</td>\n",
-       "      <td>(Euro Area) ECB Guindos Speech</td>\n",
+       "      <td>2024.04.23 17:00:00</td>\n",
+       "      <td>(United States) New Home Sales</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>2024.04.18 15:30:00</td>\n",
-       "      <td>(United States) Continuing Jobless Claims</td>\n",
+       "      <td>2024.04.23 17:00:00</td>\n",
+       "      <td>(United States) New Home Sales MoM</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>2024.04.18 15:30:00</td>\n",
-       "      <td>(United States) Initial Jobless Claims</td>\n",
+       "      <td>2024.04.24 11:00:00</td>\n",
+       "      <td>(Germany) Ifo Business Climate</td>\n",
        "      <td>High</td>\n",
-       "      <td>USD</td>\n",
+       "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>2024.04.18 15:30:00</td>\n",
-       "      <td>(United States) Jobless Claims 4-week Average</td>\n",
+       "      <td>2024.04.24 15:30:00</td>\n",
+       "      <td>(United States) Durable Goods Orders MoM</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>2024.04.18 17:00:00</td>\n",
-       "      <td>(United States) Existing Home Sales MoM</td>\n",
+       "      <td>2024.04.24 15:30:00</td>\n",
+       "      <td>(United States) Durable Goods Orders ex Defens...</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>2024.04.18 17:00:00</td>\n",
-       "      <td>(United States) Existing Home Sales</td>\n",
+       "      <td>2024.04.24 15:30:00</td>\n",
+       "      <td>(United States) Durable Goods Orders Ex Transp...</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2024.04.25 09:00:00</td>\n",
+       "      <td>(Germany) GfK Consumer Confidence</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2024.04.25 15:30:00</td>\n",
+       "      <td>(United States) GDP Growth Rate QoQ</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2024.04.25 15:30:00</td>\n",
+       "      <td>(United States) Goods Trade Balance</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2024.04.25 15:30:00</td>\n",
+       "      <td>(United States) Jobless Claims 4-week Average</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2024.04.25 15:30:00</td>\n",
+       "      <td>(United States) Initial Jobless Claims</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2024.04.25 15:30:00</td>\n",
+       "      <td>(United States) Continuing Jobless Claims</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2024.04.26 10:00:00</td>\n",
+       "      <td>(Spain) Unemployment Rate</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2024.04.26 10:00:00</td>\n",
+       "      <td>(Spain) Retail Sales MoM</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2024.04.26 10:00:00</td>\n",
+       "      <td>(Spain) Retail Sales YoY</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2024.04.26 11:00:00</td>\n",
+       "      <td>(Austria) Bank Austria Manufacturing PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2024.04.26 11:00:00</td>\n",
+       "      <td>(Euro Area) ECB Guindos Speech</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2024.04.26 15:30:00</td>\n",
+       "      <td>(United States) Core PCE Price Index YoY</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2024.04.26 15:30:00</td>\n",
+       "      <td>(United States) Core PCE Price Index MoM</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2024.04.26 15:30:00</td>\n",
+       "      <td>(United States) Personal Income MoM</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2024.04.26 15:30:00</td>\n",
+       "      <td>(United States) Personal Spending MoM</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>2024.04.26 17:00:00</td>\n",
+       "      <td>(United States) Michigan Consumer Sentiment</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
@@ -271,39 +359,71 @@
       ],
       "text/plain": [
        "                   Date                                              Event  \\\n",
-       "0   2024.04.15 15:30:00                   (United States) Retail Sales YoY   \n",
-       "1   2024.04.15 15:30:00      (United States) Retail Sales Ex Gas/Autos MoM   \n",
-       "2   2024.04.15 15:30:00                   (United States) Retail Sales MoM   \n",
-       "3   2024.04.15 15:30:00  (United States) NY Empire State Manufacturing ...   \n",
-       "4   2024.04.15 15:30:00          (United States) Retail Sales Ex Autos MoM   \n",
-       "5   2024.04.16 12:00:00             (Germany) ZEW Economic Sentiment Index   \n",
-       "6   2024.04.16 15:30:00                   (United States) Building Permits   \n",
-       "7   2024.04.17 12:00:00                                    (Euro Area) CPI   \n",
-       "8   2024.04.18 10:15:00                     (Euro Area) ECB Guindos Speech   \n",
-       "9   2024.04.18 15:30:00          (United States) Continuing Jobless Claims   \n",
-       "10  2024.04.18 15:30:00             (United States) Initial Jobless Claims   \n",
-       "11  2024.04.18 15:30:00      (United States) Jobless Claims 4-week Average   \n",
-       "12  2024.04.18 17:00:00            (United States) Existing Home Sales MoM   \n",
-       "13  2024.04.18 17:00:00                (United States) Existing Home Sales   \n",
+       "0   2024.04.23 10:15:00                    (France) HCOB Manufacturing PMI   \n",
+       "1   2024.04.23 10:15:00                         (France) HCOB Services PMI   \n",
+       "2   2024.04.23 10:30:00                        (Germany) HCOB Services PMI   \n",
+       "3   2024.04.23 10:30:00                   (Germany) HCOB Manufacturing PMI   \n",
+       "4   2024.04.23 11:00:00                 (Euro Area) HCOB Manufacturing PMI   \n",
+       "5   2024.04.23 11:00:00                      (Euro Area) HCOB Services PMI   \n",
+       "6   2024.04.23 16:45:00       (United States) S&P Global Manufacturing PMI   \n",
+       "7   2024.04.23 16:45:00            (United States) S&P Global Services PMI   \n",
+       "8   2024.04.23 17:00:00                     (United States) New Home Sales   \n",
+       "9   2024.04.23 17:00:00                 (United States) New Home Sales MoM   \n",
+       "10  2024.04.24 11:00:00                     (Germany) Ifo Business Climate   \n",
+       "11  2024.04.24 15:30:00           (United States) Durable Goods Orders MoM   \n",
+       "12  2024.04.24 15:30:00  (United States) Durable Goods Orders ex Defens...   \n",
+       "13  2024.04.24 15:30:00  (United States) Durable Goods Orders Ex Transp...   \n",
+       "14  2024.04.25 09:00:00                  (Germany) GfK Consumer Confidence   \n",
+       "15  2024.04.25 15:30:00                (United States) GDP Growth Rate QoQ   \n",
+       "16  2024.04.25 15:30:00                (United States) Goods Trade Balance   \n",
+       "17  2024.04.25 15:30:00      (United States) Jobless Claims 4-week Average   \n",
+       "18  2024.04.25 15:30:00             (United States) Initial Jobless Claims   \n",
+       "19  2024.04.25 15:30:00          (United States) Continuing Jobless Claims   \n",
+       "20  2024.04.26 10:00:00                          (Spain) Unemployment Rate   \n",
+       "21  2024.04.26 10:00:00                           (Spain) Retail Sales MoM   \n",
+       "22  2024.04.26 10:00:00                           (Spain) Retail Sales YoY   \n",
+       "23  2024.04.26 11:00:00           (Austria) Bank Austria Manufacturing PMI   \n",
+       "24  2024.04.26 11:00:00                     (Euro Area) ECB Guindos Speech   \n",
+       "25  2024.04.26 15:30:00           (United States) Core PCE Price Index YoY   \n",
+       "26  2024.04.26 15:30:00           (United States) Core PCE Price Index MoM   \n",
+       "27  2024.04.26 15:30:00                (United States) Personal Income MoM   \n",
+       "28  2024.04.26 15:30:00              (United States) Personal Spending MoM   \n",
+       "29  2024.04.26 17:00:00        (United States) Michigan Consumer Sentiment   \n",
        "\n",
        "   Impact Currency  \n",
-       "0    High      USD  \n",
-       "1    High      USD  \n",
-       "2    High      USD  \n",
-       "3    High      USD  \n",
-       "4    High      USD  \n",
+       "0    High      EUR  \n",
+       "1    High      EUR  \n",
+       "2    High      EUR  \n",
+       "3    High      EUR  \n",
+       "4    High      EUR  \n",
        "5    High      EUR  \n",
        "6    High      USD  \n",
-       "7    High      EUR  \n",
-       "8    High      EUR  \n",
+       "7    High      USD  \n",
+       "8    High      USD  \n",
        "9    High      USD  \n",
-       "10   High      USD  \n",
+       "10   High      EUR  \n",
        "11   High      USD  \n",
        "12   High      USD  \n",
-       "13   High      USD  "
+       "13   High      USD  \n",
+       "14   High      EUR  \n",
+       "15   High      USD  \n",
+       "16   High      USD  \n",
+       "17   High      USD  \n",
+       "18   High      USD  \n",
+       "19   High      USD  \n",
+       "20   High      EUR  \n",
+       "21   High      EUR  \n",
+       "22   High      EUR  \n",
+       "23   High      EUR  \n",
+       "24   High      EUR  \n",
+       "25   High      USD  \n",
+       "26   High      USD  \n",
+       "27   High      USD  \n",
+       "28   High      USD  \n",
+       "29   High      USD  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
