--- a/double3_sma_nb.ipynb
+++ b/double3_sma_nb.ipynb
@@ -326,7 +326,7 @@
     "\n",
     "# Lot Size\n",
     "lot_size = 3\n",
-    "per_lot = 100000\n",
+    "per_lot = 100_000\n",
     "\n",
     "# pyramid\n",
     "pyramid_size = 4\n",
