setup to run with the old volume calculation to compare results

--- a/custom_SB3_a2c_ppo.ipynb
+++ b/custom_SB3_a2c_ppo.ipynb
@@ -9,34 +9,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 24,
       "metadata": {
         "tags": []
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\gymnasium\\envs\\registration.py:694: UserWarning: \u001b[33mWARN: Overriding environment forex-hedge-v0 already in registry.\u001b[0m\n",
-            "  logger.warn(f\"Overriding environment {new_spec.id} already in registry.\")\n",
-            "c:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\gymnasium\\envs\\registration.py:694: UserWarning: \u001b[33mWARN: Overriding environment forex-unhedge-v0 already in registry.\u001b[0m\n",
-            "  logger.warn(f\"Overriding environment {new_spec.id} already in registry.\")\n",
-            "c:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\gymnasium\\envs\\registration.py:694: UserWarning: \u001b[33mWARN: Overriding environment stocks-hedge-v0 already in registry.\u001b[0m\n",
-            "  logger.warn(f\"Overriding environment {new_spec.id} already in registry.\")\n",
-            "c:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\gymnasium\\envs\\registration.py:694: UserWarning: \u001b[33mWARN: Overriding environment stocks-unhedge-v0 already in registry.\u001b[0m\n",
-            "  logger.warn(f\"Overriding environment {new_spec.id} already in registry.\")\n",
-            "c:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\gymnasium\\envs\\registration.py:694: UserWarning: \u001b[33mWARN: Overriding environment crypto-hedge-v0 already in registry.\u001b[0m\n",
-            "  logger.warn(f\"Overriding environment {new_spec.id} already in registry.\")\n",
-            "c:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\gymnasium\\envs\\registration.py:694: UserWarning: \u001b[33mWARN: Overriding environment crypto-unhedge-v0 already in registry.\u001b[0m\n",
-            "  logger.warn(f\"Overriding environment {new_spec.id} already in registry.\")\n",
-            "c:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\gymnasium\\envs\\registration.py:694: UserWarning: \u001b[33mWARN: Overriding environment mixed-hedge-v0 already in registry.\u001b[0m\n",
-            "  logger.warn(f\"Overriding environment {new_spec.id} already in registry.\")\n",
-            "c:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\gymnasium\\envs\\registration.py:694: UserWarning: \u001b[33mWARN: Overriding environment mixed-unhedge-v0 already in registry.\u001b[0m\n",
-            "  logger.warn(f\"Overriding environment {new_spec.id} already in registry.\")\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from tqdm import tqdm\n",
         "import random\n",
@@ -70,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -96,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -112,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
@@ -121,7 +98,7 @@
               "88989"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 27,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -132,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -144,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [
         {
@@ -153,7 +130,7 @@
               "4"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 29,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -167,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -183,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
@@ -192,7 +169,7 @@
               "Timestamp('2024-05-03 23:00:00+0000', tz='UTC')"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -203,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -214,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
@@ -234,7 +211,7 @@
               "              dtype='datetime64[ns, UTC]', name='Time', length=121, freq=None)"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -252,7 +229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -268,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -278,11 +255,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [],
       "source": [
-        "env_train = MyMtEnv(\n",
+        "env_train = MtEnv(\n",
         "    original_simulator=sim_train,\n",
         "    trading_symbols=['EURUSD'],\n",
         "    window_size = 10,\n",
@@ -301,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -314,7 +291,7 @@
         "    symbols_filename=FOREX_DATA_PATH\n",
         ")\n",
         "\n",
-        "env_validation = MyMtEnv(\n",
+        "env_validation = MtEnv(\n",
         "    original_simulator=sim_validation,\n",
         "    trading_symbols=['EURUSD'],\n",
         "    window_size = 10,\n",
@@ -333,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -346,7 +323,7 @@
         "    symbols_filename=FOREX_DATA_PATH\n",
         ")\n",
         "\n",
-        "env_testing = MyMtEnv(\n",
+        "env_testing = MtEnv(\n",
         "    original_simulator=sim_testing,\n",
         "    trading_symbols=['EURUSD'],\n",
         "    window_size = 10,\n",
@@ -372,7 +349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -452,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -468,7 +445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -561,7 +538,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "tags": []
       },
@@ -632,7 +609,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -649,7 +626,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -659,7 +636,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -5037,14 +5014,14 @@
         "            algo=tpe.suggest,\n",
         "            max_evals=250, # Number of evaluations of the objective function\n",
         "            trials=trials,\n",
-        "            trials_save_file=f'gym_mtsim_forked/examples/hyperopt/trials_5_4_new_volume_calc.pkl')\n",
+        "            trials_save_file=f'gym_mtsim_forked/examples/hyperopt/trials_5_4_old_volume_calc.pkl')\n",
         "\n",
         "print(\"Best parameters:\", best)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
