added the calendar statement to the trading folder as well

--- a/editing_calendar_statement.ipynb
+++ b/editing_calendar_statement.ipynb
@@ -106,6 +106,7 @@
     "# import the file\n",
     "filename = \"C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_\" + str(year) + '_' + str(month) + '_' +  str(day) + \".csv\"\n",
     "tester_location = \"C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/tester/files/calendar_statement_\" + str(year) + '_' + str(month) + '_' +  str(day) + \".csv\"\n",
+    "trading_location = \"C:/Users/WilliamFetzner/Documents/Trading/\" + str(year) + '_' + str(month) + '_' +  str(day) + \".csv\"\n",
     "df = pd.read_csv(filename)\n",
     "filename"
    ]
@@ -309,6 +310,7 @@
     "df['Date'] = df['Date'] + pd.Timedelta(hours=7)\n",
     "# tester location\n",
     "df.to_csv(tester_location, index=False)\n",
+    "df.to_csv(trading_location, index=False)\n",
     "# convert Date into a string with the format: YYYY.MM.DD HH:MI:SS\n",
     "df['Date'] = df['Date'].dt.strftime('%Y.%m.%d %H:%M:%S')\n",
     "df"
