added a Exception as e to the code so that any errors would show in the print statement

--- a/saving_tested_model.ipynb
+++ b/saving_tested_model.ipynb
@@ -441,8 +441,9 @@
         "            order_len = len(orders_made_in_episode)\n",
         "            total_reward, total_profit = my_profit_calculation(orders_made_in_episode, 0.001)\n",
         "            \n",
-        "        except:\n",
+        "        except Exception as e:\n",
         "            print('There were not any orders produced by the model')\n",
+        "            print(f'Here is the error {e}')\n",
         "            order_len = 0\n",
         "\n",
         "        # model_dict[f'model_{episode}'] = model\n",
@@ -524,8 +525,8 @@
         "    try:\n",
         "        rewards, orders, profits = train_val_model(PPO, policy, env_train, env_validation, seed, step_key,  \n",
         "                                                    learning_rate, gamma, ent_coef, total_learning_timesteps)\n",
-        "    except:\n",
-        "        print(f'''there was an error with those parameters: timesteps: {learning_timesteps}, \\n\n",
+        "    except Exception as e:\n",
+        "        print(f'''there was an error {e} with those parameters: timesteps: {learning_timesteps}, \\n\n",
         "              ent_coef: {ent_coef}, gamma: {gamma}, learning_rate: {learning_rate}''')\n",
         "        return {'loss': None, 'status': STATUS_FAIL, 'eval_time': time.time(), 'parameters': params}\n",
         "    # timesteps_models_dict[step_key] = models_dict\n",
@@ -765,7 +766,7 @@
         "    try:\n",
         "        new_dict['orders'] = result['parameters']['avg_orders']\n",
         "        new_dict['profits'] = result['parameters']['profits']\n",
-        "    except: \n",
+        "    except Exception as e: \n",
         "        new_dict['orders'] = 0\n",
         "        new_dict['profits'] = 0\n",
         "    new_row = pd.DataFrame(new_dict, index=[idx])\n",
@@ -1092,8 +1093,8 @@
         "            order_len = len(orders_made_in_episode_test)\n",
         "            total_reward, total_profit, orders_df = my_profit_calculation(orders_made_in_episode_test, 0.001)\n",
         "            rewards.append(total_profit)\n",
-        "        except:\n",
-        "            print('There were not any orders produced by the model')\n",
+        "        except Exception as e:\n",
+        "            print(f'There were not any orders produced by the model. Error = {e}')\n",
         "            order_len = 0\n",
         "    reward_over_tests[f'{training}_1'] = rewards\n"
       ]
