--- a/hyperparameter_search.ipynb
+++ b/hyperparameter_search.ipynb
@@ -533,8 +533,8 @@
         "            order_len = len(orders_made_in_episode)\n",
         "            total_reward, total_profit = my_profit_calculation(orders_made_in_episode, 0.001)\n",
         "            \n",
-        "        except:\n",
-        "            print('There were not any orders produced by the model')\n",
+        "        except Exception as e:\n",
+        "            print(f'There were not any orders produced by the model. Error: {e}')\n",
         "            order_len = 0\n",
         "\n",
         "        # model_dict[f'model_{episode}'] = model\n",
@@ -616,8 +616,8 @@
         "    try:\n",
         "        rewards, orders, profits = train_val_model(PPO, policy, env_train, env_validation, seed, step_key,  \n",
         "                                                    learning_rate, gamma, ent_coef, total_learning_timesteps)\n",
-        "    except:\n",
-        "        print(f'''there was an error with those parameters: timesteps: {learning_timesteps}, \\n\n",
+        "    except Exception as e:\n",
+        "        print(f'''there was an error {e} with those parameters: timesteps: {learning_timesteps}, \\n\n",
         "              ent_coef: {ent_coef}, gamma: {gamma}, learning_rate: {learning_rate}''')\n",
         "        return {'loss': None, 'status': STATUS_FAIL, 'eval_time': time.time(), 'parameters': params}\n",
         "    # timesteps_models_dict[step_key] = models_dict\n",
@@ -5537,7 +5537,7 @@
         "    try:\n",
         "        new_dict['orders'] = result['parameters']['avg_orders']\n",
         "        new_dict['profits'] = result['parameters']['profits']\n",
-        "    except: \n",
+        "    except Exception as e: \n",
         "        new_dict['orders'] = 0\n",
         "        new_dict['profits'] = 0\n",
         "    new_row = pd.DataFrame(new_dict, index=[idx])\n",
@@ -6066,8 +6066,8 @@
         "    try:\n",
         "        rewards, orders = train_val_model(PPO, policy, env_train, env_testing, seed, step_key,  \n",
         "                                                    learning_rate, gamma, ent_coef, total_learning_timesteps)\n",
-        "    except:\n",
-        "        print(f'''there was an error with those parameters: timesteps: {learning_timesteps}, \\n\n",
+        "    except Exception as e:\n",
+        "        print(f'''there was an error {e} with those parameters: timesteps: {learning_timesteps}, \\n\n",
         "              ent_coef: {ent_coef}, gamma: {gamma}, learning_rate: {learning_rate}''')\n",
         "        return {'loss': None, 'status': STATUS_FAIL, 'eval_time': time.time(), 'parameters': params}\n",
         "    # timesteps_models_dict[step_key] = models_dict\n",
