fixed bug where total_profit was not defined when there wasn't any orders so it was throwing an error

--- a/hyperparameter_search.ipynb
+++ b/hyperparameter_search.ipynb
@@ -536,6 +536,7 @@
         "        except Exception as e:\n",
         "            print(f'There were not any orders produced by the model. Error: {e}')\n",
         "            order_len = 0\n",
+        "            total_profit = 0\n",
         "\n",
         "        # model_dict[f'model_{episode}'] = model\n",
         "        # model.save(f'best_hyperparameters/models_4_26_24/model_{episode}.pkl')\n",
