--- a/saving_tested_model.ipynb
+++ b/saving_tested_model.ipynb
@@ -445,6 +445,7 @@
         "            print('There were not any orders produced by the model')\n",
         "            print(f'Here is the error {e}')\n",
         "            order_len = 0\n",
+        "            total_profit = 0\n",
         "\n",
         "        # model_dict[f'model_{episode}'] = model\n",
         "        # model.save(f'best_hyperparameters/models_4_26_24/model_{episode}.pkl')\n",
