prep for next week

--- a/hyperparameter_search.ipynb
+++ b/hyperparameter_search.ipynb
@@ -76,12 +76,12 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# now = datetime.now()\n",
-        "# current_time = pd.to_datetime(now) + timedelta(hours=7)\n",
-        "# current_time = current_time.replace(tzinfo=pytz.UTC)\n",
+        "now = datetime.now()\n",
+        "current_time = pd.to_datetime(now) + timedelta(hours=7)\n",
+        "current_time = current_time.replace(tzinfo=pytz.UTC)\n",
         "# date_15min = fx_rl.bars_back(current_time, 'M15')\n",
         "# date_5min = fx_rl.bars_back(current_time, 'M5')\n",
-        "# date_1hr = fx_rl.bars_back(current_time, 'H1')\n"
+        "date_1hr = fx_rl.bars_back(current_time, 'H1')\n"
       ]
     },
     {
@@ -90,22 +90,23 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# sim = MtSimulator(\n",
-        "#     unit='USD',\n",
-        "#     balance=10000.,\n",
-        "#     leverage=100.,\n",
-        "#     stop_out_level=0.2,\n",
-        "#     hedge=False,\n",
-        "# )\n",
-        "# sim.download_data(\n",
-        "#     symbols=['EURUSD', 'AUDCHF', 'NZDCHF', 'GBPNZD', 'USDCAD'],\n",
-        "#     time_range=(\n",
-        "#         date_15min,\n",
-        "#         current_time\n",
-        "#     ),\n",
-        "#     timeframe=Timeframe.M15\n",
-        "# )\n",
-        "# sim.save_symbols(f'symbols_forex_15min_{date_15min.date()}_{current_time.date()}.pkl')"
+        "sim = MtSimulator(\n",
+        "    unit='USD',\n",
+        "    balance=10000.,\n",
+        "    leverage=100.,\n",
+        "    stop_out_level=0.2,\n",
+        "    hedge=False,\n",
+        ")\n",
+        "sim.download_data(\n",
+        "    symbols=['EURUSD', 'AUDCHF', 'NZDCHF', 'GBPNZD', 'USDCAD'],\n",
+        "    time_range=(\n",
+        "        date_1hr,\n",
+        "        current_time\n",
+        "    ),\n",
+        "    timeframe=Timeframe.H1\n",
+        ")\n",
+        "sim.save_symbols(FOREX_DATA_PATH)\n",
+        "# sim.save_symbols(f'symbols_forex_15min_{date_1hr.date()}_{current_time.date()}.pkl')"
       ]
     },
     {
@@ -140,7 +141,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "with open(f'symbols_forex_1hr_2008-05-19_2024-05-08', 'rb') as f:\n",
+        "with open(FOREX_DATA_PATH, 'rb') as f:\n",
         "    symbols_1hr = pickle.load(f)\n",
         "# convert symbols_1hr to a pd.dataframe\n",
         "symbols_1hr[1]['EURUSD'].index = pd.to_datetime(symbols_1hr[1]['EURUSD'].index)\n",
@@ -185,7 +186,8 @@
       "outputs": [],
       "source": [
         "class MyMtEnv(gym_mtsim.MtEnv):\n",
-        "    _get_modified_volume = fx_rl.my_get_modified_volume"
+        "    # _get_modified_volume = fx_rl.my_get_modified_volume\n",
+        "    _get_prices = fx_rl.my_get_prices"
       ]
     },
     {
@@ -296,7 +298,7 @@
         "    leverage=100.,\n",
         "    stop_out_level=0.2,\n",
         "    hedge=True,\n",
-        "    symbols_filename=FOREX_DATA_PATH_1HR\n",
+        "    symbols_filename=FOREX_DATA_PATH\n",
         ")\n",
         "\n",
         "env_validation_1hr = MyMtEnv(\n",
@@ -441,6 +443,10 @@
         "def my_profit_calculation(env_orders, stop_loss):\n",
         "        # env_orders = env_testing.render()['orders']\n",
         "        # stop_loss = 0.001\n",
+        "        mean_value = env_orders['Volume'].mean()\n",
+        "\n",
+        "        # # Normalize the column to have a mean of 1\n",
+        "        env_orders.loc[:, 'Volume'] = round((env_orders['Volume'] / mean_value), 2)\n",
         "\n",
         "        # add a column for when the difference between the Entry Price and the Exit Price is greater than stop_loss\n",
         "        env_orders.loc[:, 'stoploss_hit'] = np.where((env_orders['Type'].str.strip() == 'Buy') &\n",
@@ -507,12 +513,12 @@
       "source": [
         "space = {\n",
         "    # 'learning_rate': hp.loguniform('learning_rate', -5, -2), # Learning rate\n",
-        "    'learning_rate': hp.uniform('learning_rate', 0, 0.08), # Learning rate\n",
-        "    'gamma': hp.uniform('gamma', 0.9, 0.99), # Discount factor\n",
+        "    'learning_rate': hp.uniform('learning_rate', 0, 0.04), # Learning rate\n",
+        "    'gamma': hp.uniform('gamma', 0.925, 0.975), # Discount factor\n",
         "    # 'ent_coef': hp.loguniform('ent_coef', -5, 0) # Entropy coefficient\n",
-        "    'ent_coef': hp.uniform('ent_coef', 0, 0.2), # Entropy coefficient\n",
+        "    'ent_coef': hp.uniform('ent_coef', 0, 0.05), # Entropy coefficient\n",
         "    # 'learning_timesteps': hp.choice('learning_timesteps', [25, 50, 100, 250, 500]),\n",
-        "    'timeframe': hp.choice('timeframe', ['5min', '15min', '1hr'])\n",
+        "    # 'timeframe': hp.choice('timeframe', ['5min', '15min', '1hr'])\n",
         "}"
       ]
     },
@@ -648,21 +654,21 @@
         "    ent_coef = params['ent_coef']\n",
         "    gamma = params['gamma'] #0.99 #\n",
         "    learning_rate = params['learning_rate']#0.0003#\n",
-        "    timeframe = params['timeframe']\n",
-        "    if timeframe == '5min':\n",
-        "        env_train = env_train_5min\n",
-        "        env_validation = env_validation_5min\n",
-        "    elif timeframe == '15min':\n",
-        "        env_train = env_train_15min\n",
-        "        env_validation = env_validation_15min\n",
-        "    elif timeframe == '1hr':\n",
-        "        env_train = env_train_1hr\n",
-        "        env_validation = env_validation_1hr\n",
+        "    # timeframe = params['timeframe']\n",
+        "    # if timeframe == '5min':\n",
+        "    #     env_train = env_train_5min\n",
+        "    #     env_validation = env_validation_5min\n",
+        "    # elif timeframe == '15min':\n",
+        "    #     env_train = env_train_15min\n",
+        "    #     env_validation = env_validation_15min\n",
+        "    # elif timeframe == '1hr':\n",
+        "    #     env_train = env_train_1hr\n",
+        "    #     env_validation = env_validation_1hr\n",
         "\n",
-        "    if learning_rate > 0.15:\n",
+        "    if learning_rate > 0.08:\n",
         "        print(f'Learning rate too high: {learning_rate}')\n",
         "        return {'loss': None, 'status': STATUS_FAIL, 'eval_time': time.time(), 'parameters': params}\n",
-        "    if ent_coef > 0.3:\n",
+        "    if ent_coef > 0.1:\n",
         "        print(f'Entropy too high: {ent_coef}')\n",
         "        return {'loss': None, 'status': STATUS_FAIL, 'eval_time': time.time(), 'parameters': params}\n",
         "\n",
@@ -673,7 +679,7 @@
         "    class_name = type(PPO).__qualname__\n",
         "    plot_key = f'{class_name}_rewards_'+step_key\n",
         "    try:\n",
-        "        rewards, orders, profits = train_val_model(PPO, policy, env_train, env_validation, seed, step_key,  \n",
+        "        rewards, orders, profits = train_val_model(PPO, policy, env_train_1hr, env_validation_1hr, seed, step_key,  \n",
         "                                                    learning_rate, gamma, ent_coef, total_learning_timesteps)\n",
         "    except Exception as e:\n",
         "        if 'Tensor of shape' in str(e):\n",
@@ -735,7 +741,7 @@
         "            algo=tpe.suggest,\n",
         "            max_evals=500, # Number of evaluations of the objective function\n",
         "            trials=trials,\n",
-        "            trials_save_file=f'gym_mtsim_forked/examples/hyperopt/trials_5_8_timeframe_test.pkl')\n",
+        "            trials_save_file=f'gym_mtsim_forked/examples/hyperopt/trials_5_11_search_next_week.pkl')\n",
         "\n",
         "print(\"Best parameters:\", best)"
       ]
