--- a/increasing_data_for_model.ipynb
+++ b/increasing_data_for_model.ipynb
@@ -5888,8 +5888,45 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "model.learn():   0%|          | 0/100000 [00:00<?, ?it/s]"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "model.learn(): 100300it [09:18, 179.65it/s]                            \n",
+            "100%|██████████| 10/10 [00:02<00:00,  3.48it/s]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Min. Profit          :  -1019.934\n",
+            "Avg. Profit          :   -289.728\n",
+            "Max. Profit          :    655.277\n",
+            "Min. Rewards          :     -0.614\n",
+            "Avg. Rewards          :     -0.080\n",
+            "Max. Rewards          :      1.145\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# test which version of the model to take, does it make a difference whether I use model_0 or model_9\n",
         "obs_tr, info_tr = env_train.reset(seed=seed)\n",
